# Learnings

./: .gitignore  README.md  main.py  pyproject.toml
Agents/: L1_Multi-Agent_Conversation_and_Stand-up_Comedy.ipynb
Agents/AI Agentic Design Patterns with AutoGen/: L1_Multi-Agent_Conversation_and_Stand-up_Comedy.ipynb  L2_Sequential_Chats_and_Customer_Onboarding.ipynb  L4_Tool_Use_and_Conversational_Chess.ipynb  L5_Coding_and_Financial_Analysis.ipynb  L6-Planning_and_Stock_Report_Generation.ipynb
Agents/GoogleADK/: README.md
Agents/GoogleADK/adk_learning_01/: requirements.txt
Agents/GoogleADK/adk_learning_01/math_agent/: agent.py  mathematics_agent.py
Agents/Langchain's Open Agent Platform/: __init__.py
POCs/DBs/Pg_Vector/: db_ops.py
POCs/Prompts/: postgress_prompt_suggestion.py
POCs/prompts/: __init__.py  base_prompt_suggestion.py  postgress_prompt_suggestion.py  prompt.md
POCs/retrievers/: contextual_compressor.py
